--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Organizr</title>
-  </head>
-  <body ng-app="app">
-    Hello!
+    <head>
+        <meta charset="utf-8">
+        <title>Organizr</title>
+        <link rel="stylesheet" href="/dist/css/vendor.css" media="screen" charset="utf-8">
+        <link rel="stylesheet" href="/dist/css/app.css" media="screen" charset="utf-8">
+    </head>
+    <body ng-app="app">
+        <header>
+            <md-toolbar class="md-hue-2">
+                <div class="md-toolbar-tools">
+                    <md-button class="md-icon-button" aria-label="Settings" ng-disabled="true">
+                        <md-icon md-svg-icon="/dist/img/icons/menu.svg"></md-icon>
+                    </md-button>
+                    <h2>
+                        <span>Spotify Playlist Organizr</span>
+                    </h2>
+                    <span flex></span>
+                    <md-button class="md-icon-button" aria-label="More">
+                        <md-icon md-svg-icon="/dist/img/icons/more-vert.svg"></md-icon>
+                    </md-button>
+                </div>
+            </md-toolbar>
+        </header>
+        Hello!
 
-    <ng-view></ng-view>
+        <ng-view></ng-view>
 
-    <script src="/dist/js/vendor.js"></script>
-    <script src="/dist/js/all.js"></script>
-  </body>
+        <script src="/dist/js/vendor.js"></script>
+        <script src="/dist/js/all.js"></script>
+    </body>
 </html>
