add boilerplate for recommendations page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                             </div>
                         </md-list-item>
                         <md-divider ></md-divider>
+                        <md-list-item class="md-3-line" ng-click="changeView('recommendations')">
+                            <img src="/dist/img/icons/library-music.svg" alt="recommendations" class="md-avatar"/>
+                            <div class="md-list-item-text" layout="column">
+                                <h3>Recommendations</h3>
+                                <p>Get the new shit for your playlists!</p>
+                            </div>
+                        </md-list-item>
                     </md-list>
                 </md-content>
 
